@@ -1,31 +1,29 @@
 package ia.model;
 
-import engine.Engine;
 import engine.agent.Action;
 import engine.agent.Agent;
 import engine.map.GameMap;
 import engine.object.GameObject;
+import ia.perception.Perception;
 
 import java.util.List;
 
 public class Random implements Model {
 
-    double rotatRatio = 0;
-
+    double currentRotation = 0;
     /**
      * method that gives completely random movements
-     *
-     * @param engine
-     * @param map     GameMap
-     * @param agents  list of agents in simulation
+     * @param map GameMap
+     * @param agents list of agents in simulation
      * @param objects list of GameObjet in simulation
      * @return Action object with random values
-     * @throws IllegalArgumentException <br>- map==null
-     *                                  <br>- agents==null
-     *                                  <br>- objects==null
+     * @throws IllegalArgumentException
+     * <br>- map==null
+     * <br>- agents==null
+     * <br>- objects==null
      */
     @Override
-    public Action getAction(Engine engine, GameMap map, List<Agent> agents, List<GameObject> objects) {
+    public Action getAction(GameMap map, List<Agent> agents, List<GameObject> objects) {
 
         if (map == null)
             throw new IllegalArgumentException("map is null");
@@ -34,11 +32,10 @@ public class Random implements Model {
         if (objects == null)
             throw new IllegalArgumentException("objects is null");
 
-        rotatRatio += (engine.getRandom().nextDouble()-0.5) * 0.8;
-        rotatRatio = Math.max(-1, Math.min(1, rotatRatio));
+        currentRotation += (Math.random() - 0.5) * 0.5;
+        currentRotation = Math.clamp(currentRotation, -1, 1);
 
-        return new Action(rotatRatio, 1);
+        return new Action(currentRotation, 1);
 
     }
 }
-
